[gd_scene load_steps=6 format=3 uid="uid://dqi7ekpwfx780"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_4w2it"]
[ext_resource type="Texture2D" uid="uid://vympwop2vhxc" path="res://Assets/Characters/character_0000.png" id="2_yut0r"]
[ext_resource type="Texture2D" uid="uid://bryvnrjngs5y5" path="res://Assets/Characters/character_0001.png" id="3_wesdm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5h3j6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yut0r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yut0r")
}, {
"duration": 1.0,
"texture": ExtResource("3_wesdm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3qogp"]
radius = 7.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -9)
script = ExtResource("1_4w2it")

[node name="JumpTrojectoryLine" type="Line2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.19209e-07, 1.19209e-07)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_5h3j6")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_3qogp")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
